--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"fumadocs-ui": "15.5.0",
 		"next": "15.3.3",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
