--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"next": "15.3.3",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"styled-jsx": "^5.1.7",
 		"tailwind-merge": "^3.3.0"
 	},
 	"devDependencies": {
